Add and use the display_length attribute on columns
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@6939 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Models.pod
+++ b/lib/Jifty/Manual/Models.pod
@@ -94,6 +94,7 @@ non-terminals that are self-explanatory to perl-developers):
        | 'validator' 'is' subroutine_reference
        | 'immutable'
        | 'unreadable'
+       | 'display_length' 'is' number
        | 'max_length' 'is' number
        | 'mandatory'
        | 'not_null'
