--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -313,9 +313,11 @@ Check details from Angus himself. ( http://www.twinhelix.com/ )
 
 =head2 Render model refers_to field as a select widget with meaningful display name
 
+See L<Jifty::Record> for C<brief_description> method.
+
 Sometimes you need to render a column which is using C<refers_to> to other
-model. but you want not to display id of the entries , but meaningful display
-name instead.
+model. but you want not to display unique id of the entries , but meaningful
+display name instead.
 
     use Jifty::DBI::Schema;
     use MyApp::Record schema {
@@ -340,8 +342,8 @@ you can implement a C<name> method in ModelColor:
         return $self->color_name;
     }
 
-so that, when you render an field which refers to MyApp::Model::Color , it will render
-a select widget with the mapping color names for you.
+so that, when you render an field which refers to MyApp::Model::Color , it will
+render a select widget with the mapping color names instead the unique id for you.
 
 =head2 Create mutually dependent models
 
