fix tutorial pod: head1 NAME
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@7082 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial_zhtw.pod
+++ b/lib/Jifty/Manual/Tutorial_zhtw.pod
@@ -1,10 +1,10 @@
 =encoding utf8
 
-=head1 標題
+=head1 NAME
 
 Jifty::Manual::Tutorial_zhtw - Jifty 從零開始
 
-=head1 敘述
+=head1 DESCRIPTION
 
 這份教學文件將提供建構第一個 jifty 應用程式所需要的技巧。
 
